# house-search-map-tracker

./: README.md  TODO.md
api/: .env_example  pyproject.toml
api/src/: app.py  models.py
api/src/controlers/: house.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.vue
ui/src/components/: DatabaseQueries.ts  MapView.vue
ui/styles_jsons/: alidade_smooth_dark.json  openmaptiles.json
