[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hector Muro", email = "hectormauer@proton.me" }
]
dependencies = [
    "litestar[standard]>=2.12.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
